# test1_gcc_cmake

./: CMakeLists.txt  README.md  main.cpp
test1_hello/: CMakeLists.txt  Test1_hello.cpp  Test1_hello.h
